                    
                    Changes in afex Version 1.1-x
                    Released March 2022
                    
    Significant User Visible Changes and New Features
    
    o   Fitting messages for mixed() are now only shown per default in 
        interactive mode, thanks to Marius Barth (#111).
    
    o   Nicer error message about missing variables for ANOVAs.
    
    Bugfixes
    
    o   Fixed overzealous data completeness check introduced in version 1.0 in 
        aov_car() which prevented ANOVAs with additive factors and no cross over
        data from working.
        
    o   mixed(..., method = "LRT") and similar nested methdos should work with
        empty factor levels: https://github.com/singmann/afex/issues/96



                    *************************
                    ** afex VERSION 1.0-x **
                    *************************
                    
                    Changes in afex Version 1.0-x
                    Released July 2021
                    
    Significant User Visible Changes and New Features
    
    o   ANOVA objects do not by default contain the aov slot any more
    
    o   emmeans() for ANOVA now uses multivariate model as default
    
    o   Default p-value method for mixed() is now Satterthwaite: method = "S"
    
    o   New data set, Urry et al. (2021, Psych Science): laptop_urry
    
    The following changes are thanks to Mattan S. Ben-Shachar:
    
    o   Added new vignette: "Testing the Assumptions of ANOVAs"
    
    o   Added predict() method for afex_aov objects.
    
    o   Deprecated functions test_levene() and test_sphercitiy(), which are now
        part of the performance package as performance::check_homogeneity() and
        performance::check_sphericity(), respectively.
    
    Bugfixes

    o   All vignettes should run without suggested packages present.
    
    o   Added ez to suggests, to avoid NOTE on CRAN solaris.


